--- a/PI/src/Css/dashbord_adm.css
+++ b/PI/src/Css/dashbord_adm.css
@@ -115,26 +115,28 @@
     flex-direction: row;
     width: 100%;
     height: 60vh;
-    padding: 50px;
+    /* padding: 50px; */
     margin-top: 3rem;
-    background-color: white;
+    /* background-color: white; */
     color: #4a4a4a;
     border-radius: 10px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    gap: 1rem;
+    /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
+    gap: 2rem;
 } 
 
+
+
 .grafico_geral_produtos{
-    width: 50%;
-    /* background-color: blue; */
+    width: 100%;
+    background-color: white;
+    border-radius: 10px;
     height: 400px;
-    /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
     align-items: center;
-    /* background-color: blue; */
 }
 .area_grafico{
     display: flex;
@@ -146,6 +148,7 @@
 }
 
 .grafico_geral_produtos h2{
+    font-size: 18px;
     text-align: center;
     top: 0;
 }
@@ -164,7 +167,7 @@
     }
     .metric_card{
         width: 200px;
-        height: 100px;
+        height: 200px;
     }
     .pesquisa_geral_dados_produtos{
         flex-direction: column;
