--- a/PI/src/Css/comprar_produto.css
+++ b/PI/src/Css/comprar_produto.css
@@ -550,7 +550,6 @@
     display: flex;
     justify-content: space-between;
     color: #4A4A4A;
-
 }
 
 .icone_produto_solo_item{
@@ -563,7 +562,6 @@
     justify-content: center;
     align-items: center;
     display: flex;
-
 }
 
 .icone_produto_solo_item:hover{
@@ -580,12 +578,13 @@
 }
 
 
+
 .descricao_produto_solo_cont_body{
     flex-direction: column;
     opacity: 0;
     height: 0;
     margin-top: 1rem;
-    overflow: hidden; /* Evitar que conteúdo fique visível durante a animação */
+    overflow: hidden; 
     visibility: hidden;
     display: flex;
     transition: all 0.2s ease;
@@ -599,9 +598,10 @@
 
 }
 
-.descricao_produto_solo_cont_body:has(.active_solo) .icone_produto_solo_item{
-    transform: rotate(180deg);
 
+
+.descricao_produto_solo_cont_body:has(.active_solo) .icone_produto_solo_item .fa-chevron-up{
+    transform: rotate(180deg);
 }
 
 
@@ -610,7 +610,6 @@
 
 .descricao_produto_solo_cont_body .descricao_solo{
     display: flex;
-
     padding: 1rem;
     width: 100%;
     color: #4A4A4A;
@@ -621,10 +620,6 @@
     margin-bottom: 1rem;
 
 }
-
-
-
-
 
 
 .container_comentarios{
@@ -874,8 +869,8 @@ gap: 1rem;
 
 
 @media (max-width:900px) {
-
     
+
     .display_none_solo{
         display: none;
         
