--- a/PI/src/Css/comprar_produto.css
+++ b/PI/src/Css/comprar_produto.css
@@ -550,6 +550,7 @@
     display: flex;
     justify-content: space-between;
     color: #4A4A4A;
+
 }
 
 .icone_produto_solo_item{
@@ -562,6 +563,7 @@
     justify-content: center;
     align-items: center;
     display: flex;
+
 }
 
 .icone_produto_solo_item:hover{
@@ -578,13 +580,12 @@
 }
 
 
-
 .descricao_produto_solo_cont_body{
     flex-direction: column;
     opacity: 0;
     height: 0;
     margin-top: 1rem;
-    overflow: hidden; 
+    overflow: hidden; /* Evitar que conteúdo fique visível durante a animação */
     visibility: hidden;
     display: flex;
     transition: all 0.2s ease;
@@ -598,10 +599,9 @@
 
 }
 
-
-
-.descricao_produto_solo_cont_body:has(.active_solo) .icone_produto_solo_item .fa-chevron-up{
+.descricao_produto_solo_cont_body:has(.active_solo) .icone_produto_solo_item{
     transform: rotate(180deg);
+
 }
 
 
@@ -610,6 +610,7 @@
 
 .descricao_produto_solo_cont_body .descricao_solo{
     display: flex;
+
     padding: 1rem;
     width: 100%;
     color: #4A4A4A;
@@ -620,6 +621,10 @@
     margin-bottom: 1rem;
 
 }
+
+
+
+
 
 
 .container_comentarios{
@@ -891,8 +896,8 @@ gap: 1rem;
 
 
 @media (max-width:900px) {
-    
 
+    
     .display_none_solo{
         display: none;
         
