--- a/PI/src/Css/dashbord_adm.css
+++ b/PI/src/Css/dashbord_adm.css
@@ -23,8 +23,6 @@
     margin-top: 2rem;
     padding: 30px;
 }
-
-
 .metric_card{
     background-color: #fff;
     border-radius: 8px;
@@ -61,6 +59,8 @@
     gap: 3rem;
     height: 300px;
     margin-top: 3rem;
+    margin-bottom: 5rem;
+
 }
 
 /* .grafico_dados .grafico_dados_1{
@@ -116,12 +116,12 @@
     width: 100%;
     height: 60vh;
     /* padding: 50px; */
-    margin-top: 2px;
+    margin-top: 3rem;
+    /* background-color: white; */
     color: #4a4a4a;
     border-radius: 10px;
     /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
-    margin-top: 1rem;
-    gap: 1rem;
+    gap: 2rem;
 } 
 
 
@@ -130,7 +130,7 @@
     width: 100%;
     background-color: white;
     border-radius: 10px;
-    height: 100%;
+    height: 400px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     display: flex;
     flex-direction: column;
