--- a/PI/src/Css/sobre_nos.css
+++ b/PI/src/Css/sobre_nos.css
@@ -484,10 +484,8 @@
     font-size: 19px;
     font-weight: 300;
     color: #4A4A4A;
-    text-align: justify;
+    text-align: center;
 }
-
-
 
 
 .btn_card_sobre{
@@ -526,6 +524,22 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* AREA CONTEUDO SOBRE NÓS */
 
 
@@ -541,17 +555,6 @@
     display: flex;
     width: 100%;
     height: 90%;
-}
-
-.conteudo_text_about{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 90%;
-}
-
-.texto_about{
-    text-align: justify;
 }
 
 
