--- a/PI/src/Css/home.css
+++ b/PI/src/Css/home.css
@@ -451,7 +451,7 @@
 
 .banner_card_1{
     grid-area: banner1;
-    height: 50%;
+    /* height: 50%; */
     width: 100%;
     display: flex;
     padding: 5px;
@@ -469,7 +469,7 @@
 
 .banner_card_2{
     grid-area:  banner2;
-    height:50% ;
+    /* height:50% ; */
     display: flex;
     width: 100%;
     border-radius: 5px;
@@ -481,7 +481,7 @@
 .banner_card_2 img{
     display: flex;
     width: 100%;
-    height: 50%;
+    height: 100%;
     border-radius: 5px;
     object-fit: cover;
 
@@ -489,7 +489,7 @@
 
 .banner_card_3{
     grid-area:  banner3;
-    height: 50%;
+    /* height: 50%; */
     display: flex;
     width: 100%;
 }
